--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,18 @@
 ---
-title: "Henji15.github.io"
+title: "Max Tu"
+image: media/headshot.jpg
+toc: false
+about: 
+  template: jolla 
+  image-shape: round
+  image-width: 17em
+  links:
+    - text: LinkedIn
+      href: www.linkedin.com/in/max-tu-833983239
+    - text: Github
+      href: https://github.com/Henji15
+    - text: Email
+      href: mailto:mtu893@ucsb.edu
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+Hi, nice to meet y'all! My name is Max Tu (pronounced two). I'm a third year environmental studies and economics student at UC Santa Barbara. I'm passionate about creating sustainable solutions that can both benefit the environment and the market. I'm also interested about climate mitigation and urban planning. I hope to continue in a career in the environmental industry. Feel free to explore the page!
