--- a/resume.qmd
+++ b/resume.qmd
@@ -1,5 +1,5 @@
 ---
 title: "Resume"
 ---
-<embed src="media/Tu_Max_Resume.pdf" type="application/pdf" width="100%" height="600px" />
----
+
+## <embed src="media/Tu_Max_Resume.pdf" type="application/pdf" width="100%" height="600px" />
