getting rid of the toc for resume and about me page

--- a/resume.qmd
+++ b/resume.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Resume"
+toc: false
 ---
 
 ## <embed src="media/Tu_Max_Resume.pdf" type="application/pdf" width="100%" height="600px" />
