--- a/AboutMe.qmd
+++ b/AboutMe.qmd
@@ -7,11 +7,9 @@ toc: false
 
 I have a Shiba Inu named Henji. He's currently ten years old. I remember really wanting to have a dog when I was younger as I was the only child in the family. He loves to sleep and watch us eat food all the time. Even though he is very stubborn and does not listen well at all, he's been a blessing to our family. Because of him, we would go walk around the neighborhood much more often. That actually led us to meeting our neighbors and getting to know them much better. I'm very thankful to have Henji in my life as a lifelong companion. Here are some photos of him :)
 
-! \[text\] (media/dog1.jpeg){width=60%}
+! \[text\] (media/dog1.jpeg){width=60%} ! \[text\] (media/dog2.jpeg){width=60%}
 
-! \[text\] (media/dog2.jpeg){width=60%}
-
-\![text\] (media/dog3.jpeg){width=60%}
+! \[text\] (media/dog3.jpeg){width=60%}
 
 # Taiwan
 
