--- a/AboutMe.qmd
+++ b/AboutMe.qmd
@@ -7,8 +7,12 @@ toc: false
 
 I have a Shiba Inu named Henji. He's currently ten years old. I remember really wanting to have a dog when I was younger as I was the only child in the family. He loves to sleep and watch us eat food all the time. Even though he is very stubborn and does not listen well at all, he's been a blessing to our family. Because of him, we would go walk around the neighborhood much more often. That actually led us to meeting our neighbors and getting to know them much better. I'm very thankful to have Henji in my life as a lifelong companion. Here are some photos of him :)
 
-![Me with my dog](media/dog1.jpeg){width="60%" align="left"} ![](media/dog2.jpeg){width="60%" align="center"} ![Sleepy](media/dog3.jpeg){width="60%" align="right"}
+![Me with my dog](media/dog1.jpeg){width="40%" align="left"} ![](media/dog2.jpeg){width="40%" align="center"} ![Sleepy](media/dog3.jpeg){width="40%" align="right"}
 
 # Taiwan
+
+My family is from Taiwan, so we try to go back at least once a year. The vast majority of my relatives still live in Taiwan, and it's always great to reconnect with them once a year. I love the vibes of the cities, the pubic transport, the culture, and the food in Taiwan. The feel is just different from the US and unique in its own good way. It's definitely the home away from home for me. The family and food are definitely the things that I miss the most when I come back home. I would recommend visiting in the winter though, as the summer can be very hot and humid.
+
+!
 
 # My Hometown
