--- a/AboutMe.qmd
+++ b/AboutMe.qmd
@@ -7,7 +7,7 @@ toc: false
 
 I have a Shiba Inu named Henji. He's currently ten years old. I remember really wanting to have a dog when I was younger as I was the only child in the family. He loves to sleep and watch us eat food all the time. Even though he is very stubborn and does not listen well at all, he's been a blessing to our family. Because of him, we would go walk around the neighborhood much more often. That actually led us to meeting our neighbors and getting to know them much better. I'm very thankful to have Henji in my life as a lifelong companion. Here are some photos of him :)
 
-![Me with my dog](media/dog1.jpeg){width="40%" align="left"} ![](media/dog2.jpeg){width="40%" align="center"} ![Sleepy](media/dog3.jpeg){width="40%" align="right"}
+![Me with my dog](media/dog1.jpeg){width="40%" align="left"} ![](media/dog2.jpeg){width="55%" align="center"} ![Sleepy](media/dog3.jpeg){width="40%" align="right"}
 
 # Taiwan
 
@@ -19,7 +19,7 @@ My family is from Taiwan, so we try to go back at least once a year. The vast ma
 
 My hometown is in Tustin, a suburb in Orange County. It borders Irvine, Santa Ana, and Orange. I have lived here for most of my life. It's a safe city with an old town district that's pretty unique. The weather is good year round and it's not too far from LA either. The city has a good variety of food, from asian, american, and mexican cuisine. There's a lot of parks and greenery in the city. I attached a map of food spots to check out in Tustin if you ever find yourself down there.
 
-```{r}
+```{r echo=FALSE}
 library(leaflet)
 restaurants <- data.frame(
   name = c("Tanakaya Japanese Soba", "Barolo Cafe", "Ding Tea", "Seven Grams"),
